added UpdateGradesCommand